# AGENT

./: .dockerignore  .env.example  .gitignore  AGENTS.md  CLAUDE.md  README.md  Resume.docx  agent_ai_app_interview_prep.html  main.py  project_roadmap.md  pytest.ini  requirements-dev.txt  requirements.in  requirements.txt  resume_alignment.md
agent/: Dockerfile  README.md  pyproject.toml
agent/src/agent_app/: executor.py  planner.py  retrieval_tool.py  service.py  state.py  tools.py
agent/tests/: test_executor.py  test_loop.py  test_planner.py  test_question_decompose_tool.py  test_service.py  test_summary_tool.py  test_tool_selector.py  test_tools.py
agent/tests/api/: test_health_api.py  test_run_api.py  test_tools_api.py
rag/: .dockerignore  .env.example  Dockerfile  README.md  compose.yaml  pyproject.toml  requirements-dev.in  requirements-dev.txt  requirements.in  requirements.txt
rag/app/: main.py
rag/app/routers/: ask.py
rag/config/: config.py
rag/experiments/: answer_quality_check.md  large_pdf_ingestion_report.md  latency_benchmark.md  llm_judge_report.md  prompt_comparison_report.md  retrieval_baseline_2026-06-05.md  retrieval_chunk_experiment.md  retrieval_eval_cases.json  retrieval_eval_cases_lexical.json  retrieval_hybrid_2026-06-11.md
rag/experiments/evaluation_runs/: 20260512-224733.json  20260512-225308.json  20260512-225647.json  20260513-204547.json  20260516-200732.json  20260517-223617.json  20260518-202817.json  20260518-203035.json  20260518-215650.json
rag/src/rag_app/app/: main.py
rag/tests/: conftest.py  test_package_layout.py
(+131 files in other folders)
