[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "agent-app"
version = "0.1.0"
description = "Lightweight agent orchestration layer."
requires-python = ">=3.11"
dependencies = [
    "fastapi",
]

[tool.setuptools.packages.find]
where = ["src"]
include = ["agent_app*"]

[tool.pytest.ini_options]
pythonpath = ["src", "../rag/src"]
testpaths = ["tests"]
