[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "agent-rag"
version = "0.1.0"
description = "Learning-focused RAG application."
requires-python = ">=3.11"
dynamic = ["dependencies"]

[tool.setuptools.dynamic]
dependencies = { file = ["requirements.in"] }

[tool.setuptools.packages.find]
where = ["src"]
include = ["rag_app*"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
